# roaming-axum

./: .gitignore  LICENSE  README.md
config/: .env.example  Cargo.toml
config/src/: main.rs
cookie/: Cargo.toml
cookie/src/: main.rs
error-handling/: .gitignore  README.md
error-handling/extract/src/: main.rs
error-handling/nginx/: nginx.conf
error-handling/normal-struct/: Cargo.toml
error-handling/normal-struct/src/: extract.rs  handler.rs
hcaptcha/: Cargo.toml
hcaptcha/src/: main.rs
hcaptcha/templates/: base.html  feed.html  feed_action.html
jwt/: Cargo.toml
jwt/src/: main.rs
middleware/: Cargo.toml
middleware/src/: main.rs  user_agent.rs
postgres/: Cargo.toml  axum.rs.sql
postgres/src/: main.rs
redis/: Cargo.toml
redis/src/: main.rs
request/: Cargo.toml
request/src/: main.rs
response/: Cargo.toml  README.md
response/src/: errors.rs  main.rs
route/: Cargo.toml
route/src/: main.rs
session/: Cargo.toml
session/src/: main.rs
state/state-arc/: Cargo.toml
state/state-arc/src/: main.rs
state/state-compound/: Cargo.toml
state/state-compound-arc/: Cargo.toml
state/state-compound-arc/src/: main.rs
state/state-compound/src/: main.rs
state/state-normal/: Cargo.toml
state/state-normal/src/: main.rs
static-files/: Cargo.toml
static-files/src/: main.rs
static-files/static/: axum-rs.txt
template/: Cargo.toml
template/src/: main.rs
template/templates/: index.html
upload-file/: Cargo.toml
upload-file/src/: main.rs
