[package]
name = "response"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/roaming-axum"
homepage = "https://axum.rs"
description = "axum.rs专题《漫游AXUM》"


[dependencies]
axum = "0.3"
tokio = { version="1", features = ["full"] }
serde = { version="1", features = ["derive"] }
serde_json = "1"
