[package]
name = "upload-file"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/axumrs/roaming-axum"
homepage = "https://axum.rs"
description = "axum.rs专题《漫游AXUM》"


[dependencies]
axum =  {version = "0.3", features = ["multipart"] } 
tokio = { version="1", features = ["full"] }
